Create endpoint to update orders (#18)
* feat: create update order

* chore: change command

* feat: add in Swagger annotation

* feat: update swagger

* feat: add ID to the query param

* feat: add uri type

* make properties optional with omitempty

* remove UpdatedAt

* update swagger
