# internal/handlers/order_handler.go
@@ -5,6 +5,8 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/Pos-tech-FIAP-GO-HORSE/order-management/internal/core/ports/order/update_order"
+
 	"github.com/Pos-tech-FIAP-GO-HORSE/order-management/internal/core/ports/order/create_order"
 	"github.com/Pos-tech-FIAP-GO-HORSE/order-management/internal/core/ports/order/find_all_orders"
 
@@ -15,12 +17,14 @@ import (
 
 type OrderHandler struct {
 	createOrderUseCase   create_order.ICreateOrderUseCase
+	updateOrderUseCase   update_order.IUpdateOrderUseCase
 	findAllOrdersUseCase find_all_orders.IFindAllOrdersUseCase
 }
 
 func NewOrderHandler(orderRepository repositories.IOrderRepository, productRepository repositories.IProductRepository, userRepository repositories.IUserRepository) *OrderHandler {
 	return &OrderHandler{
 		createOrderUseCase:   orders.NewCreateProductUseCase(orderRepository, productRepository, userRepository),
+		updateOrderUseCase:   orders.NewUpdateOrderUseCase(orderRepository),
 		findAllOrdersUseCase: orders.NewFindAllOrdersUseCase(orderRepository),
 	}
 }
@@ -57,6 +61,49 @@ func (h *OrderHandler) CreateOrder(c *gin.Context) {
 
 	c.JSON(http.StatusCreated, gin.H{
 		"message": "order created successfully",
+	})
+}
+
+// UpdateOrder godoc
+// @Summary      Update an existing order
+// @Description  Update the details of an existing order
+// @Tags         Orders
+// @Accept       json
+// @Produce      json
+// @Param        id      path      string              true  "Order ID"
+// @Param        order   body      update_order.Input  true  "Updated Order Data"
+// @Success      200     {object}  ResponseMessage
+// @Failure      400     {object}  ResponseMessage
+// @Failure      500     {object}  ResponseMessage
+// @Router       /orders/{id} [patch]
+func (h *OrderHandler) UpdateOrder(c *gin.Context) {
+	var input update_order.Input
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	if err := c.ShouldBindUri(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	ctx, cancel := context.WithTimeout(c, time.Second*5)
+	defer cancel()
+
+	if err := h.updateOrderUseCase.Execute(ctx, input); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "order has been updated successfully",
 	})
 }
 
