# internal/routes/orders.go
@@ -11,5 +11,6 @@ func AddOrdersRoutes(app *gin.Engine, handler *handlers.OrderHandler) {
 	{
 		v1.POST("/orders", handler.CreateOrder)
 		v1.GET("/orders", handler.FindAllOrders)
+		v1.PATCH("/orders/:id", handler.UpdateOrder)
 	}
 }
